removed unnecessary files and folders

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # IntelliJ IDEA
 *.iml
-.idea/
+target
+.idea
 
 # Maven
 target/
@@ -15,9 +16,6 @@ buildNumber.properties
 ## https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
 
-# Gradle
-.gradle
-**/build/
-!src/**/build/
+
 
 .java-version
